--- a/config.toml
+++ b/config.toml
@@ -1,15 +1,17 @@
 baseurl = "https://example.com/"  # End your URL with a `/` trailing slash.
-title = "Academic"
-copyright = "&copy; 2016 Your Name"
+title = "A few cheap shots"
+copyright = "&copy; 2017 Andrew Tyre"
 theme = "hugo-academic"
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
 
 # Enable comments by entering your Disqus shortname
-disqusShortname = ""
+disqusShortname = "@drewtyre"
 
 # Enable analytics by entering your Google Analytics tracking ID
 googleAnalytics = ""
+
+ignoreFiles = ["\\.Rmd$", "_files$", "_cache$"]
 
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "en"
@@ -19,17 +21,17 @@ defaultContentLanguageInSubdir = false
   hrefTargetBlank = true
 
 [params]
-  name = "Lena Smith"
-  role = "Professor of Artificial Intelligence"
-  organization = "Stanford University"
-  organization_url = ""
+  name = "Andrew Tyre"
+  role = "Professor of Wildlife Ecology"
+  organization = "University of Nebraska - Lincoln"
+  organization_url = "https://www.unl.edu"
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
-  avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
-  email = "test@example.org"
-  address = "Building 1 Room 1, Stanford University, California, 90210, USA"
-  office_hours = "Monday 10:00 to 13:00 or email for appointment"
-  phone = "888 888 88 88"
-  skype = "echo123"
+  avatar = "tyre_drew_mug_101116_square.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
+  email = "atyre2@unl.edu"
+  address = "416 Hardin Hall, 3310 Holdrege St, Lincoln, NE, 68583-0974"
+  office_hours = "email for appointment"
+  phone = "+1 402 472 4054"
+  skype = "drew_tyre"
   telegram = ""
 
   # Enable Keybase in Contact section by entering your keybase.io username.
@@ -41,7 +43,7 @@ defaultContentLanguageInSubdir = false
 
   # Enable global LaTeX math rendering?
   #   If false, you can enable it locally on a per page basis.
-  math = false
+  math = true
 
   # Highlight.js options
   #   highlight
@@ -77,7 +79,7 @@ defaultContentLanguageInSubdir = false
   #   For more info on the highlighting options, see:
   #   https://gcushen.github.io/hugo-academic-demo/post/writing-markdown-latex/#highlighting-options
   highlight = true
-  highlight_languages = []
+  highlight_languages = ["r","yaml"]
   # highlight_style = "github"
   # highlight_version = "9.9.0"
 
@@ -126,22 +128,22 @@ defaultContentLanguageInSubdir = false
   [[params.social]]
     icon = "envelope"
     icon_pack = "fa"
-    link = "mailto:test@example.org"
+    link = "mailto:atyre2@unl.edu"
 
   [[params.social]]
     icon = "twitter"
     icon_pack = "fa"
-    link = "//twitter.com/GeorgeCushen"
+    link = "//twitter.com/SNRatyre2"
 
   [[params.social]]
     icon = "google-scholar"
     icon_pack = "ai"
-    link = "https://scholar.google.co.uk/citations?user=sIwtMXoAAAAJ"
+    link = "https://scholar.google.com/citations?user=WafwKngAAAAJ&hl=en"
 
   [[params.social]]
     icon = "github"
     icon_pack = "fa"
-    link = "//github.com/gcushen"
+    link = "//github.com/atyre2"
 
 
 # Navigation Links
