--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
 
 # Enable comments by entering your Disqus shortname
-disqusShortname = "@drewtyre"
+disqusShortname = "drewtyre"
 
 # Enable analytics by entering your Google Analytics tracking ID
 googleAnalytics = ""
