--- a/config.toml
+++ b/config.toml
@@ -136,9 +136,20 @@ defaultContentLanguageInSubdir = false
     link = "//twitter.com/SNRatyre2"
 
   [[params.social]]
+    icon = "linkedin"
+    icon_pack = "fa"
+    link = "//www.linkedin.com/in/drew-tyre"
+
+  [[params.social]]
     icon = "google-scholar"
     icon_pack = "ai"
-    link = "https://scholar.google.com/citations?user=WafwKngAAAAJ&hl=en"
+    link = "//scholar.google.com/citations?user=WafwKngAAAAJ&hl=en"
+
+  [[params.social]]
+    icon = "researchgate"
+    icon_pack = "ai"
+    link = "//www.researchgate.net/profile/Andrew_Tyre"
+
 
   [[params.social]]
     icon = "github"
