fiddling with disqus comments

--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ footnotereturnlinkcontents = "<sup>^</sup>"
 
 
 # Enable comments by entering your Disqus shortname
-disqusShortname = "drewtyre"
+disqusShortname = "cheap-shots"
 
 # Enable analytics by entering your Google Analytics tracking ID
 googleAnalytics = ""
