added changes up to 3.3

--- a/config.toml
+++ b/config.toml
@@ -40,6 +40,9 @@ enableGitInfo = false
   hrefTargetBlank = true
   fractions = true  # `false` disables smart fractions (e.g. 5/12 formatted as a fraction).
   smartypants = true # `false` disables all smart punctuation substitutions (e.g. smart quotes, dashes, fractions).
+  extensions = ["backslashLineBreak"]
+
+
 
 [params]
   # Author setup 
