fix twitter sharing

--- a/config.toml
+++ b/config.toml
@@ -252,7 +252,7 @@ enableGitInfo = false
   [[params.social]]
     icon = "twitter"
     icon_pack = "fab"
-    link = "https://twitter.com/SNRatyre2"
+    link = "https://twitter.com/atiretoo"
 
   [[params.social]]
     icon = "instagram"
