Change menu order and links

--- a/config.toml
+++ b/config.toml
@@ -299,7 +299,7 @@ enableGitInfo = false
 
 [[menu.main]]
   name = "Home"
-  url = "#about"
+  url = "#hero"
   weight = 1
 
 #[[menu.main]]
@@ -323,9 +323,15 @@ enableGitInfo = false
   weight = 5
 
 [[menu.main]]
+  name = "Biography"
+  url = "#about"
+  weight = 6
+
+
+[[menu.main]]
   name = "Contact"
   url = "#contact"
-  weight = 6
+  weight = 7
   
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
