--- a/config.toml
+++ b/config.toml
@@ -360,7 +360,7 @@ enableGitInfo = false
 # Taxonomies.
 [taxonomies]
   tag = "tags"
-#  category = "categories"
+  category = "categories"
   publication_type = "publication_types"
 
 # Languages
