Fuller draft of post plus fiddling with copyright etc

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "https://drewtyre.rbind.io/"  
 title = "EnTyrely Too Much"
-copyright = "&copy; 2019 Andrew Tyre"
+copyright = "&copy; 2019-2020 Andrew Tyre"
 theme = "hugo-academic"
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
