--- a/config.toml
+++ b/config.toml
@@ -96,7 +96,8 @@ enableGitInfo = false
   description = ""
 
   # Default image for social sharing and search engines. Place image in `static/img/` folder and specify image name here.
-  sharing_image = ""
+  sharing_image = "/headers/tires_clover.jpg"
+  og_image = "/img/headers/tires_clover.jpg"
 
   # Twitter username (without @). Used when a vistor shares your site on Twitter.
   twitter = "atiretoo"
